--- a/src/assets/components/Home/Tasks/Tasks.css
+++ b/src/assets/components/Home/Tasks/Tasks.css
@@ -15,15 +15,17 @@
     font-family: 'Poppins';
     font-weight: 500;
     color: #2F3034;
+    padding-top: 1.4rem;
+    padding-bottom: 1.4rem;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem;
+    border-radius: 15px;
     background-color: #FCFCFC;
 }
 
 .task-list {
     list-style-type: disc;
     padding-left: 20px;
-}
-
-.task-list ul {
 }
 
 .task-list li {
@@ -46,4 +48,15 @@
     padding: 2px 6px;
     cursor: pointer;
     flex-shrink: 0;
+}
+
+.task-list img {
+    width: 1rem;
+    margin-top: 4px;
+}
+
+.task-list input[type="checkbox"] {
+    accent-color: #A1E1D3;
+    width: fit-content;
+    margin-top: 7px;
 }
