--- a/src/assets/components/Login/Form/Form.css
+++ b/src/assets/components/Login/Form/Form.css
@@ -43,3 +43,15 @@ p {
   color: #808080;
   font-size: 0.8rem;
 }
+
+.form-container button {
+  font-family: 'Poppins';
+  font-weight: 500;
+  color: #2F3034;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+  border-radius: 15px;
+  background-color: #FCFCFC;
+}
